source/stylesheets/all.css
@charset "UTF-8";
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  src: local("Open Sans"), local("OpenSans"), url(//themes.googleusercontent.com/static/fonts/opensans/v8/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff) format("woff");
}

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 700;
  src: local("Open Sans Bold"), local("OpenSans-Bold"), url(//themes.googleusercontent.com/static/fonts/opensans/v8/k3k702ZOKiLJc3WVjuplzHhCUOGz7vYGh680lGh-uXM.woff) format("woff");
}

@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local("Roboto Regular"), local("Roboto-Regular"), url(//themes.googleusercontent.com/static/fonts/roboto/v10/2UX7WLTfW3W8TclTUvlFyQ.woff) format("woff");
}

@font-face {
  font-family: 'phantom';
  src: url("font/phantom.eot");
  src: url("font/phantom.eot#iefix") format("embedded-opentype"), url("font/phantom.woff") format("woff"), url("font/phantom.ttf") format("truetype"), url("font/phantom.svg#phantom") format("svg");
  font-weight: normal;
  font-style: normal;
}

/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
/*
@media screen and (-webkit-min-device-pixel-ratio:0) {
  @font-face {
    font-family: 'phantom';
    src: url('font/phantom.svg?42194940#phantom') format('svg');
  }
}
*/
[class^="icon-"]:before, [class*=" icon-"]:before {
  font-family: "phantom";
  font-style: normal;
  font-weight: normal;
  speak: none;
  display: inline-block;
  text-decoration: none;
  width: 1em;
  margin-right: .2em;
  text-align: center;
  /* opacity: .8; */
  /* For safety - reset parent styles, that can break glyph codes*/
  font-variant: normal;
  text-transform: none;
  /* fix buttons height, for twitter bootstrap */
  line-height: 1em;
  /* Animation center compensation - margins should be symmetric */
  /* remove if not needed */
  margin-left: .2em;
  /* you can be more comfortable with increased icons size */
  /* font-size: 120%; */
  /* Uncomment for 3D effect */
  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
}

.icon-github:before {
  content: '\e800';
}

/* '' */
.icon-twitter:before {
  content: '\e801';
}

/* '' */
.icon-gplus-circled:before {
  content: '\e802';
}

/* '' */
.icon-gplus:before {
  content: '\e803';
}

/* '' */
.icon-twitter-circled:before {
  content: '\e804';
}

/* '' */
.icon-github-circled:before {
  content: '\e805';
}

/* '' */
.icon-rss:before {
  content: '\e806';
}

/* '' */
.icon-mail:before {
  content: '\e807';
}

/* '' */
*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html {
  height: 100%;
  max-height: 100%;
}

body {
  height: 100%;
  max-height: 100%;
  font-family: 'Roboto', serif;
  font-size: 18px;
  line-height: 1.6em;
  color: #3A4145;
}

::-moz-selection {
  color: #222;
  background: #D6EDFF;
  text-shadow: none;
}

::selection {
  color: #222;
  background: #D6EDFF;
  text-shadow: none;
}

h1, h2, h3,
h4, h5, h6 {
  text-rendering: optimizeLegibility;
  line-height: 1;
  margin-top: 0;
  font-family: 'Open Sans', sans-serif;
}
h1 a, h2 a, h3 a,
h4 a, h5 a, h6 a {
  text-decoration: none;
}

h1 {
  font-size: 40px;
  line-height: 1.2em;
  letter-spacing: -2px;
  text-indent: -3px;
}

h2 {
  font-size: 35px;
  line-height: 1.2em;
  letter-spacing: -1px;
  text-indent: -2px;
  margin-top: 3em;
}

h3 {
  font-size: 30px;
  margin-top: 2em;
}

h4 {
  font-size: 25px;
  margin-top: 1.5em;
}

h5 {
  font-size: 1.5rem;
}

h6 {
  font-size: 1rem;
}

p, ul, ol {
  margin: 1.6em 0;
}

ol ol, ul ul,
ul ol, ol ul {
  margin: 0.4em 0;
}

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #efefef;
  margin: 3.2em 0;
  padding: 0;
}

blockquote {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  margin: 1.6em 0 1.6em -2.2em;
  padding: 0 0 0 1.6em;
  border-left: #4a4a4a 0.4em solid;
}

blockquote p {
  margin: 0.8em 0;
  font-style: italic;
}

blockquote small {
  display: inline-block;
  margin: 0.8em 0 0.8em 1.5em;
  font-size: 0.9em;
  color: #ccc;
}

blockquote small:before {
  content: '\2014 \00A0';
}

blockquote cite {
  font-weight: bold;
}

blockquote cite a {
  font-weight: normal;
}

dl {
  margin: 1.6em 0;
}

dl dt {
  float: left;
  width: 180px;
  overflow: hidden;
  clear: left;
  text-align: right;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-weight: bold;
  margin-bottom: 1em;
}

dl dd {
  margin-left: 200px;
  margin-bottom: 1em;
}

mark {
  background-color: #ffc336;
}

code, tt {
  padding: 1px 3px;
  font-family: Inconsolata, monospace, sans-serif;
  font-size: 0.85em;
  white-space: pre;
  border: 1px solid #E3EDF3;
  background: #F7FAFB;
  border-radius: 2px;
}

pre {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  margin: 1.6em 0;
  border: 1px solid #E3EDF3;
  width: 100%;
  padding: 10px;
  font-family: Inconsolata, monospace, sans-serif;
  font-size: 0.9em;
  white-space: pre;
  overflow: auto;
  background: #F7FAFB;
  border-radius: 3px;
}

pre code, tt {
  font-size: inherit;
  white-space: -moz-pre-wrap;
  white-space: pre-wrap;
  background: transparent;
  border: none;
  padding: 0;
}

kbd {
  display: inline-block;
  margin-bottom: 0.4em;
  padding: 1px 8px;
  border: #ccc 1px solid;
  color: #666;
  text-shadow: #fff 0 1px 0;
  font-size: 0.9em;
  font-weight: bold;
  background: #f4f4f4;
  border-radius: 4px;
  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 1px 0 0 white inset;
}

table {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  margin: 1.6em 0;
  width: 100%;
  max-width: 100%;
  background-color: transparent;
}

table th,
table td {
  padding: 8px;
  line-height: 20px;
  text-align: left;
  vertical-align: top;
  border-top: 1px solid #efefef;
}

table th {
  color: #000;
}

table caption + thead tr:first-child th,
table caption + thead tr:first-child td,
table colgroup + thead tr:first-child th,
table colgroup + thead tr:first-child td,
table thead:first-child tr:first-child th,
table thead:first-child tr:first-child td {
  border-top: 0;
}

table tbody + tbody {
  border-top: 2px solid #efefef;
}

table table table {
  background-color: #fff;
}

table tbody > tr:nth-child(odd) > td,
table tbody > tr:nth-child(odd) > th {
  background-color: #f6f6f6;
}

table.plain tbody > tr:nth-child(odd) > td,
table.plain tbody > tr:nth-child(odd) > th {
  background: transparent;
}

a {
  color: #4a4a4a;
  transition: color ease 0.3s;
}
a:hover {
  color: #E77A27;
}

.sidebar {
  position: fixed;
  width: 250px;
  height: 100%;
  padding: 50px 20px 20px 20px;
  text-align: center;
  color: #fff;
  font-size: 15px;
  background: #5b3540;
  background: -moz-linear-gradient(45deg, #5b3540 0%, #20162f 100%);
  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, #5b3540), color-stop(100%, #20162f));
  background: -webkit-linear-gradient(45deg, #5b3540 0%, #20162f 100%);
  background: -o-linear-gradient(45deg, #5b3540 0%, #20162f 100%);
  background: -ms-linear-gradient(45deg, #5b3540 0%, #20162f 100%);
  background: linear-gradient(45deg, #5b3540 0%, #20162f 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5b3540', endColorstr='#20162f',GradientType=1 );
  background-size: cover;
  background-position: 20%;
  -webkit-transform: translateZ(0);
}
.sidebar .title {
  font-size: 30px;
  color: white;
  text-decoration: none;
}
.sidebar .description {
  margin-bottom: 10px;
}
.sidebar .footer {
  position: relative;
  bottom: 0px;
  font-size: 12px;
}
.sidebar a {
  color: white;
}
.sidebar a:hover {
  color: #E77A27;
}
.sidebar .logo {
  display: block;
  width: 100%;
  max-width: 250px;
  height: auto;
  background-size: contain;
  margin: 0 auto 20px auto;
  background: no-repeat;
}
.sidebar .circle {
  display: block;
  width: 130px;
  height: 130px;
  margin: 0 auto 20px auto;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  -webkit-border-radius: 99em;
  -moz-border-radius: 99em;
  border-radius: 99em;
  border: 5px solid #eee;
  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
}
.sidebar .social-icons {
  margin-top: 10px;
}
.sidebar .icon {
  font-size: 18px;
}

.content {
  margin-left: 250px;
  padding: 50px;
  max-width: 800px;
}
.content .post {
  margin-bottom: 50px;
  padding-bottom: 20px;
  border-bottom: #EBF2F6 1px solid;
  word-break: break-word;
  hyphens: auto;
}
.content .post .post-title {
  margin: 1em 0 0 0;
}
.content .post .post-title a {
  text-decoration: none;
}
.content .post .post-excerpt p {
  margin: 1.6rem 0 0 0;
  line-height: 1.6em;
}
.content .post .post-meta {
  display: inline-block;
  margin: 0 0 5px 0;
  font-size: 15px;
  color: #9EABB3;
  display: block;
}
.content .post .post-meta a {
  color: #9EABB3;
  text-decoration: none;
}
.content .post .post-meta a:hover {
  text-decoration: underline;
}
.content .post .post-meta .comment-count {
  float: right;
}
.content .post .line-numbers .line-numbers-rows span:last-of-type {
  display: none;
}

.separator {
  display: block;
  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
}

@media all and (max-width: 800px) {
  .sidebar {
    position: relative;
    width: 100%;
    height: 250px;
    padding: 20px 20px 20px 20px;
    text-align: center;
    color: #fff;
    font-size: 15px;
    background: #303538 no-repeat center center;
    background-size: cover;
    background-position: 20%;
    -webkit-transform: translateZ(0);
  }
  .sidebar .description {
    display: none;
  }
  .sidebar .circle {
    width: 100px;
    height: 100px;
  }
  .sidebar .logo {
    margin-top: 50px;
  }

  .content {
    margin-left: 0px;
  }
}
.post-content img {
  width: 100%;
}

